(fix) set max height/width of book covers

--- a/public/client/assets/css/main.scss
+++ b/public/client/assets/css/main.scss
@@ -5,7 +5,6 @@ $lightest-color: rgba(119, 99,120,1);
 $lighter-color: rgba( 90, 71, 91,1);
 $darker-color: rgba( 41, 24, 42,1);
 $darkest-color: rgba( 37, 14, 38,1);
-$spinner-default-color: red;
 
 
 *, *:after, *:before {
@@ -44,17 +43,11 @@ body {
 /** TRENDS PAGE **/
 .book-entry {
 
-  .card-image {
-
+  .cover-image {
+    overflow: hidden;
     background-color: $lightest-color;
-
-    img {
-      width: 65%;
-      margin: auto;
-      object-fit: cover;
-      height: 200px;
-      overflow: hidden;
-    }
+    max-height: 100%;
+    max-width: 100%;
   }
 
   .card-content {
